fix .content overflow for smaller screens

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -63,7 +63,7 @@ input:hover {
     max-height: 90vh;
      /* calc */
     scroll-behavior: auto;
-    /* overflow: auto; */
+    overflow: auto;
  }
  
  /* #root {
